// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/filters/FilterSection.tsx > should be able to toggle filter value - none already set 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="stretch"
  data-direction="vertical"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-wrap="nowrap"
>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Closed"
      id="Closed"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Closed"
    >
      Closed
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Closed"
      data-testid="tooltip-icon-tooltip-Closed"
      id="tooltip-Closed"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Draft"
      id="Draft"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Draft"
    >
      Draft
    </label>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Merged"
      id="Merged"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Merged"
    >
      Merged
    </label>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Open"
      id="Open"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Open"
    >
      Open
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Open"
      data-testid="tooltip-icon-tooltip-Open"
      id="tooltip-Open"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Other"
      id="Other"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Other"
    >
      Other
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Other"
      data-testid="tooltip-icon-tooltip-Other"
      id="tooltip-Other"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx > should be able to toggle filter value - some filters already set 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="stretch"
  data-direction="vertical"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-wrap="nowrap"
>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Closed"
      id="Closed"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Closed"
    >
      Closed
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Closed"
      data-testid="tooltip-icon-tooltip-Closed"
      id="tooltip-Closed"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Draft"
      id="Draft"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Draft"
    >
      Draft
    </label>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Merged"
      id="Merged"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Merged"
    >
      Merged
    </label>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      checked=""
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Open"
      id="Open"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Open"
    >
      Open
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Open"
      data-testid="tooltip-icon-tooltip-Open"
      id="tooltip-Open"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-primary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
  <div
    class="text-sm prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="nowrap"
  >
    <input
      class="size-4 rounded-sm cursor-pointer"
      data-testid="checkbox-Other"
      id="Other"
      type="checkbox"
    />
    <label
      class="font-medium text-gitify-font cursor-pointer"
      for="Other"
    >
      Other
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="tooltip-Other"
      data-testid="tooltip-icon-tooltip-Other"
      id="tooltip-Other"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-question text-gitify-tooltip-icon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
        />
      </svg>
    </button>
    <span
      class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
    >
      0
    </span>
  </div>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx > should render itself & its children > with detailed notifications disabled 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <fieldset
        id="FilterSectionTest"
      >
        <legend>
          <div
            class="mb-2"
          >
            <div
              class="prc-Stack-Stack-UQ9k6"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
              id="title-filtersectiontitle"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-mark-github"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.766 11.695C4.703 11.437 3.25 9.904 3.25 7.92c0-.806.281-1.677.75-2.258-.203-.532-.172-1.662.062-2.129.626-.081 1.469.258 1.969.726.594-.194 1.219-.291 1.985-.291.765 0 1.39.097 1.953.274.484-.451 1.343-.79 1.969-.709.218.435.25 1.564.046 2.113.5.613.766 1.436.766 2.274 0 1.984-1.453 3.485-3.547 3.759.531.355.891 1.129.891 2.016v1.678c0 .484.39.758.859.564C13.781 14.824 16 11.905 16 8.291 16 3.726 12.406 0 7.984 0 3.562 0 0 3.726 0 8.291c0 3.581 2.203 6.55 5.172 7.663A.595.595 0 0 0 6 15.389v-1.291c-.219.097-.5.162-.75.162-1.031 0-1.641-.581-2.078-1.662-.172-.435-.36-.693-.719-.742-.187-.016-.25-.097-.25-.193 0-.194.313-.339.625-.339.453 0 .844.29 1.25.887.313.468.641.678 1.031.678.391 0 .641-.146 1-.516.266-.275.469-.517.657-.678Z"
                />
              </svg>
              <h4
                class="prc-Heading-Heading-MtWFE"
              >
                FilterSectionTitle
              </h4>
            </div>
          </div>
        </legend>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Closed"
              id="Closed"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Closed"
            >
              Closed
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Closed"
              data-testid="tooltip-icon-tooltip-Closed"
              id="tooltip-Closed"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Draft"
              id="Draft"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Draft"
            >
              Draft
            </label>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Merged"
              id="Merged"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Merged"
            >
              Merged
            </label>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Open"
              id="Open"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Open"
            >
              Open
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Open"
              data-testid="tooltip-icon-tooltip-Open"
              id="tooltip-Open"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              1
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Other"
              id="Other"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Other"
            >
              Other
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Other"
              data-testid="tooltip-icon-tooltip-Other"
              id="tooltip-Other"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              3
            </span>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx > should render itself & its children > with detailed notifications enabled 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <fieldset
        id="FilterSectionTest"
      >
        <legend>
          <div
            class="mb-2"
          >
            <div
              class="prc-Stack-Stack-UQ9k6"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
              id="title-filtersectiontitle"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-mark-github"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.766 11.695C4.703 11.437 3.25 9.904 3.25 7.92c0-.806.281-1.677.75-2.258-.203-.532-.172-1.662.062-2.129.626-.081 1.469.258 1.969.726.594-.194 1.219-.291 1.985-.291.765 0 1.39.097 1.953.274.484-.451 1.343-.79 1.969-.709.218.435.25 1.564.046 2.113.5.613.766 1.436.766 2.274 0 1.984-1.453 3.485-3.547 3.759.531.355.891 1.129.891 2.016v1.678c0 .484.39.758.859.564C13.781 14.824 16 11.905 16 8.291 16 3.726 12.406 0 7.984 0 3.562 0 0 3.726 0 8.291c0 3.581 2.203 6.55 5.172 7.663A.595.595 0 0 0 6 15.389v-1.291c-.219.097-.5.162-.75.162-1.031 0-1.641-.581-2.078-1.662-.172-.435-.36-.693-.719-.742-.187-.016-.25-.097-.25-.193 0-.194.313-.339.625-.339.453 0 .844.29 1.25.887.313.468.641.678 1.031.678.391 0 .641-.146 1-.516.266-.275.469-.517.657-.678Z"
                />
              </svg>
              <h4
                class="prc-Heading-Heading-MtWFE"
              >
                FilterSectionTitle
              </h4>
            </div>
          </div>
        </legend>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Closed"
              id="Closed"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Closed"
            >
              Closed
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Closed"
              data-testid="tooltip-icon-tooltip-Closed"
              id="tooltip-Closed"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Draft"
              id="Draft"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Draft"
            >
              Draft
            </label>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Merged"
              id="Merged"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Merged"
            >
              Merged
            </label>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              0
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Open"
              id="Open"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Open"
            >
              Open
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Open"
              data-testid="tooltip-icon-tooltip-Open"
              id="tooltip-Open"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              1
            </span>
          </div>
          <div
            class="text-sm prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <input
              class="size-4 rounded-sm cursor-pointer"
              data-testid="checkbox-Other"
              id="Other"
              type="checkbox"
            />
            <label
              class="font-medium text-gitify-font cursor-pointer"
              for="Other"
            >
              Other
            </label>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="tooltip-Other"
              data-testid="tooltip-icon-tooltip-Other"
              id="tooltip-Other"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-question text-gitify-tooltip-icon"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                />
              </svg>
            </button>
            <span
              class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
            >
              3
            </span>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;
